# tcp-practice

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  tcp-practice.pc.in
doc/: Doxyfile.in
examples/: CMakeLists.txt
inc/: errorReturn.c  errorReturn.h  protocol.c  protocol.h
src-control/: CMakeLists.txt  Makefile  main.c
src-mapper/: CMakeLists.txt  Makefile  main.c
src-roc/: CMakeLists.txt  Makefile  main.c
tests/: CMakeLists.txt  CMakeLists.txt.in  tests.cpp
